# tiny-duckdb

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: shell.cpp
docs/: lab0.md  lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  setup.md  test_unicode.txt
docs/hints/: lab0-hints.md  lab1-hints.md
lab4_lakebase/: demo.py  test_lakebase.py
lab4_lakebase/lakebase/: __init__.py  lake_table.py
src/binder/: binder.cpp
src/common/: data_chunk.cpp  types.cpp  value.cpp  vector.cpp  vector_operations.cpp
src/execution/: executor.cpp  expression_executor.cpp  physical_operator.cpp  physical_plan_generator.cpp  pipeline.cpp
src/execution/operator/: physical_filter.cpp  physical_hash_aggregate.cpp  physical_hash_join.cpp  physical_order_by.cpp  physical_result_collector.cpp  physical_table_scan.cpp
src/include/tiny_duckdb/binder/: binder.hpp  bound_expression.hpp
src/include/tiny_duckdb/common/: data_chunk.hpp  enums.hpp  exception.hpp  types.hpp  value.hpp  vector.hpp  vector_operations.hpp
src/include/tiny_duckdb/execution/: execution_context.hpp  executor.hpp  expression_executor.hpp  morsel_queue.hpp  physical_operator.hpp  pipeline.hpp  (+1 more)
src/main/: tiny_duckdb.cpp
src/parser/: ast.cpp  parser.cpp  peg.cpp  sql_grammar.cpp  transformer.cpp
src/planner/: logical_plan.cpp
src/storage/: catalog.cpp  column_chunk.cpp  row_group.cpp  table_data.cpp
test/: lab0_morsel_test.cpp  lab1_storage_test.cpp  lab2_binder_test.cpp  lab2_parser_test.cpp  lab3_execution_test.cpp  lab5_vector_expression_test.cpp  test_main.cpp
tools/: strip_solutions.sh
(+17 files in other folders)
